Settings: Updated czech translation
Change-Id: I5812dec740bad8a538ac5659dce62458e34b0dca
Signed-off-by: kecinzer <kecinzer@gmail.com>

Conflicts:
	res/values-cs/strings.xml

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -1849,6 +1849,7 @@
     <string name="rom_control_title">Nastavení ROM</string>
     <string name="themes_title">Témata vzhledu</string>
     <string name="advanced_settings_title">Možnosti zařízení</string>
+    <string name="performance_title">Nastavení výkonu</string>
     <string name="mod_version">Verze AOKP</string>
     <string name="mod_version_default">Neznámá</string>
     <string name="anonymous_statistics_title">AOKP statistiky</string>
@@ -1896,4 +1897,8 @@
     <string name="increasing_ring_interval_3seconds">3 sekundy</string>
     <string name="increasing_ring_interval_5seconds">5 sekund</string>
     <string name="increasing_ring_interval_10seconds">10 sekund</string>
+    <string name="adb_notify">Upozornění na ladění USB</string>
+    <string name="adb_notify_summary">Zobrazit upozornění v notifikační liště při zapnutém ladění přes USB</string>
+    <string name="safe_headset_volume_title">Bezpečná hlasitost sluchátek</string>
+    <string name="device_hostname">Název zařízení</string>
 </resources>
