--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -758,6 +758,12 @@
     <string name="device_info_settings" product="default" msgid="475872867864762157">"手机状态"</string>
     <string name="system_update_settings_list_item_title" msgid="3342887311059985961">"系统更新"</string>
     <string name="system_update_settings_list_item_summary" msgid="3853057315907710747"></string>
+    <string name="hardware_info">硬件信息</string>
+    <string name="device_rear_camera">后置摄像头</string>
+    <string name="device_front_camera">前置摄像头</string>
+    <string name="device_screen_resolution">屏幕分辨率</string>
+    <string name="chipset_info">芯片组</string>
+    <string name="mem_info">内存</string>
     <string name="firmware_version" msgid="4801135784886859972">"Android 版本"</string>
     <string name="model_number" msgid="3765737700545384794">"型号"</string>
     <string name="fcc_equipment_id" msgid="149114368246356737">"设备 ID"</string>
@@ -1834,4 +1840,55 @@
     <string name="user_picture_title" msgid="7297782792000291692">"照片 ID"</string>
     <string name="cell_broadcast_settings" msgid="8415582011920085222">"小区广播"</string>
     <string name="cell_broadcast_settings_summary" msgid="3301339398950905913">"请选择要显示的紧急消息类型。"</string>
+	<string name="quick_links_title">快速链接</string>
+	<string name="rom_control_title">ROM控制</string>
+	<string name="themes_title">系统主题</string>
+	<string name="performance_title">性能控制</string>
+	<string name="mod_version">AOKP 版本</string>
+	<string name="mod_version_default">未知</string>
+
+    <!-- Anonymous Statistics #CM -->
+    <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
+<string name="anonymous_statistics_title">AOKP 统计</string>
+<string name="anonymous_statistics_summary">发送匿名的统计报告帮助 AOKP 更好发展</string>
+<string name="anonymous_statistics_warning_title">关于</string>
+<string name="anonymous_statistics_warning">AOKP 数据统计允许将非个人数据提交给开发者用于统计使用设备的数量。提交的数据包括设备唯一ID，这不会损害您的隐私和个人数据。数据将在设备启动引导时提交，每周提交一次。\n\n提交的数据示例请查看预览数据。</string>
+<string name="enable_reporting_title">启用报告</string>
+<string name="preview_data_title">预览数据</string>
+<string name="view_stats_title">查看统计信息</string>
+<string name="anonymous_learn_more">更多信息</string>
+
+<!-- Anonymous Statistics - Notification -->
+<string name="anonymous_notification_desc">启用/禁用 AOKP 统计</string>
+<!-- Anonymous Statistics - Preview -->
+<string name="preview_id_title">设备唯一 ID</string>
+<string name="preview_device_title">设备</string>
+<string name="preview_version_title">版本</string>
+<string name="preview_country_title">国家或地区</string>
+<string name="preview_carrier_title">运营商</string>
+
+    <!-- Quiet hours #CM -->
+<string name="quiet_hours_title">静音时段</string>
+<string name="quiet_hours_summary">设置设备自动进入静音状态的时间段</string>
+<string name="quiet_hours_enabled_title">启用静音时段</string>
+<string name="quiet_hours_start">静音时段开始</string>
+<string name="quiet_hours_start_summary">设置何时开始进入静音状态</string>
+<string name="quiet_hours_end">静音时段结束</string>
+<string name="quiet_hours_end_summary">设置何时退出静音状态</string>
+<string name="quiet_hours_notifications_title">屏蔽通知音效</string>
+<string name="quiet_hours_ringer_title">屏蔽来电铃声</string>
+<string name="quiet_hours_still_title">关闭震动</string>
+<string name="quiet_hours_dim_title">关闭通知灯</string>
+<string name="quiet_hours_active_from">静音时间从</string>
+<string name="quiet_hours_active_to">到</string>
+
+    <!-- time range preference -->
+<string name="start_time_title">开始</string>
+<string name="end_time_title">结束</string>
+
+    <string name="vibration_title">振动效果</string>
+    <string name="link_volume_ringtones">合并音量</string>
+    <string name="link_volume_mutes">合并静音状态</string>
+    <string name="safe_headset_volume_title">耳机安全音量</string>
+    <string name="device_hostname">设备名称</string>
 </resources>
