Settings part: Add Sprint Tools (CDMATools) into settings. (Part 1 of 3)   -devices can set this in overlay. (Not for all CDMA devices)
For more information see this thread:  http://forum.xda-developers.com/showthread.php?t=1774503

Patchset 2: get rid of TABS
Patchset 3: attempting to make it look clean
Patchset 4: last attempt tonight to clean it...
Patchset 5: rename

Change-Id: I121f61cd16d4064a1ded85428ac4857c653e6582

Conflicts:
	res/values/strings.xml
	src/com/android/settings/Settings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4545,4 +4545,7 @@
 
     <!-- Launcher settings  -->
     <string name="launcher_settings_title">Launcher</string>
+    
+    <!-- Sprint Tools -->
+    <string name="sprint_tools_title">Sprint Tools</string>
 </resources>
