--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4596,4 +4596,7 @@
 
     <!-- Permissions Management -->
     <string name="permissions_settings_title">Permissions</string>
+
+    <!-- TRDS Settings -->
+    <string name="trds_settings_title">Dark AOKP</string>
 </resources>
