Swap volume buttons when the screen is rotated by 90 or 180 degrees (2/2)  - picked from SlimBean Change-Id: Ie2166a4d50050e7a60933251bfc8cda97c42d419
Conflicts:
	res/values/strings.xml
	src/com/android/settings/SoundSettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4569,4 +4569,9 @@
     <string name="volume_adjust_sounds_enable_title">Volume adjust sound</string>
     <!-- Sound settings screen, setting check box summary -->
     <string name="volume_adjust_sounds_enable_summary">Play sound when adjusting volume with hard keys</string>
+
+    <!-- Swap volume buttons when the screen is rotated by 90 or 180 degrees -->
+    <string name="swap_volume_buttons_title">Swap volume buttons</string>
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string> 
+
 </resources>
