--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4572,6 +4572,10 @@
 
     <!-- Swap volume buttons when the screen is rotated by 90 or 180 degrees -->
     <string name="swap_volume_buttons_title">Swap volume buttons</string>
-    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string> 
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated by 90 or 180 degrees</string>
+
+    <!-- Lock volume keys -->
+    <string name="sound_lock_volume_keys_title">Lock volume keys</string>
+    <string name="sound_lock_volume_keys_summary">Prevents accidental unset of silent mode by pressing volume keys</string>
 
 </resources>
