[2/2] Power connect/disconnect notification support - CM
part 1/2: frameworks/base PowerUI and Settings
http://review.cyanogenmod.org/#/c/35241/

part 2/2: packages/apps/Settings Sound settings
http://review.cyanogenmod.org/#/c/35242/

patchset 3:
    set settings persistence and dependencies in xml resource file
    shrink long lines
    add the default notification tone to the ringtone picker and
        remove the now redundant "use default" checkbox
    move values/strings.xml content to the cyanogenmod section
    improve (mostly delete) wording in values/strings.xml
    remove tab whitespace

patchset 5:
    move strings to cm_strings

patchset 6:
    make vibrate optional (default on)
    change heading text: power notifications -> power sounds

patchset 7:
    hide vibrate option if hw capability doesn't exist

Change-Id: I7ddd8a47ae4f9a62c586023d151ac42bbe8424c7

Conflicts:
	res/values/cm_strings.xml
	res/xml/sound_settings.xml
	src/com/android/settings/SoundSettings.java

Conflicts:
	res/values/strings.xml
	res/xml/sound_settings.xml
	src/com/android/settings/SoundSettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4541,6 +4541,19 @@
     <string name="camera_sounds">Camera sounds</string> ** TODO ** -->
     <string name="safe_headset_volume_title">Safe headset volume</string>
 
+    <!-- Category title for power sound notification specific Settings.
+         [CHAR LIMIT=40] -->
+    <string name="power_notifications_category_title">Power sounds</string>
+
+    <!-- Sound settings, power notifications enable/disable, setting check box label -->
+    <string name="power_notifications_enable_title">Enable</string>
+    <!-- Sound settings, power notifications vibrate enable/disable, setting check box label -->
+    <string name="power_notifications_vibrate_title">Vibrate</string>
+    <!-- Sound settings, power notifications ringtone selection, preference label -->
+    <string name="power_notifications_ringtone_title">Notification sound</string>
+    <!-- Sound settings, power notifications label for ringtone == none -->
+    <string name="power_notifications_ringtone_silent">Silent</string>
+
     <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
     <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
 
