--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1832,4 +1832,86 @@
     <string name="user_picture_title" msgid="7297782792000291692">"Fotóazonosító"</string>
     <string name="cell_broadcast_settings" msgid="8415582011920085222">"Cellán belüli adások"</string>
     <string name="cell_broadcast_settings_summary" msgid="3301339398950905913">"Válassza ki a megjelenítendő vészriasztások típusait."</string>
+
+    <string name="quick_links_title">Gyors elérések</string>
+    <string name="rom_control_title">ROM Vezérlés</string>
+    <string name="themes_title">Témák</string>
+    <string name="performance_title">Teljesítmény vezérlő</string>
+
+    <string name="mod_version">AOKP verzió</string>
+    <string name="mod_version_default">Ismeretlen</string>
+
+    <!-- Anonymous Statistics #CM -->
+    <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
+    <string name="anonymous_statistics_title">AOKP Statiszkikák</string>
+    <string name="anonymous_statistics_summary">Anonim statisztikák küldése, hogy jobbá tegyük az AOKP-t</string>
+    <string name="anonymous_statistics_warning_title">Rólunk</string>
+    <string name="anonymous_statistics_warning">Az elküldött adat nem tartalmaz személyes adatot. Nem tartalmaz azonosítót, nem sérti személyes jogaidat, személyes adataidat Hetente küldi rendszerindítás után.\n\nAz adatokat küldés előtt az Adat előnézetben tudod ellenőrizni.</string>
+    <string name="enable_reporting_title">Jelentés engedélyezése</string>
+    <string name="preview_data_title">Adat előnézet</string>
+    <string name="preview_data_summary">%s</string>
+    <string name="view_stats_title">Statisztika megnézése</string>
+    <string name="anonymous_learn_more">További információ</string>
+
+    <!-- Anonymous Statistics - Notification -->
+    <string name="anonymous_notification_desc">Engedélyezi vagy nem az AOKP statisztikát</string>
+
+    <!-- Anonymous Statistics - Preview -->
+    <string name="preview_id_title">Egyedi azonosító</string>
+    <string name="preview_device_title">Eszköz</string>
+    <string name="preview_version_title">Verzió</string>
+    <string name="preview_country_title">Ország</string>
+    <string name="preview_carrier_title">Szolgáltató</string>
+
+    <!--  About device screen, Hardware info -->
+    <string name="hardware_info">Hardver információ</string>
+    <!--  About device Screen, hardware info, rear camera -->
+    <string name="device_rear_camera">Hátsó kamera</string>
+    <!--  About device Screen, hardware info, front camera -->
+    <string name="device_front_camera">Elülső kamera</string>
+    <!--  About device Screen, hardware info, screen res -->
+    <string name="device_screen_resolution">Képernyő felbontás</string>
+
+        <!-- Quiet hours #CM -->
+    <string name="quiet_hours_title">Csendes órák</string>
+    <string name="quiet_hours_summary">Az eszköz csendes időszakának beállítása</string>
+    <string name="quiet_hours_enabled_title">Engedélyezi a csendes órákat</string>
+    <string name="quiet_hours_start">Csendes órák kezdete</string>
+    <string name="quiet_hours_start_summary">Mikortól kezdődjön az időszak</string>
+    <string name="quiet_hours_end">Csendes órák vége</string>
+    <string name="quiet_hours_end_summary">Mikor legyen vége az időszaknak</string>
+    <string name="quiet_hours_notifications_title">Némitás értesítési hang</string>
+    <string name="quiet_hours_ringer_title">Néma telefon rezgés</string>
+    <string name="quiet_hours_still_title">Rezgés tiltása</string>
+    <string name="quiet_hours_dim_title">Értesítési fény tiltása</string>
+    <string name="quiet_hours_active_from">Aktív</string>
+    <string name="quiet_hours_active_to">között</string>
+    <string name="vibration_title">Telefon rezgés</string>
+    <string name="advanced_settings_title">Eszköz beállítások</string>
+    <string name="link_volume_ringtones">Link hangerő</string>
+    <string name="link_volume_mutes">Link néma állapot</string>
+
+    <!-- AOKP specific sound settings
+    <string name="camera_sounds">Camera sounds</string> ** TODO ** -->
+    <string name="safe_headset_volume_title">Biztonsági fejhallgató hangerő</string>
+
+    <!-- Hostname setting -->
+    <string name="device_hostname">Eszköz azonosító</string>
+
+    <string name="volume_adjust_sounds_enable_title">Hangerő állítási hang</string>
+    <!-- Sound settings screen, setting check box summary -->
+    <string name="volume_adjust_sounds_enable_summary">Hanghatás miközben a hangerőt állítod a hangerő gombokkal</string>
+
+    <!--- Sms security limit -->
+    <string name="app_security_title">Alkamazás biztonság</string>
+    <string name="sms_security_check_limit_title">SMS üzenet határ</string>
+    <string name="sms_security_check_limit_summary">Megjelenit egy figyelmeztető ablakot, ha az alkalmazások gyakran küldenek SMS-t. Aktuális korlát: %d üzenet 30 percenként (újraindítás szükséges) </string>
+    <string name="sms_security_check_limit_default">30 (Alaphelyzet)</string>
+    <!-- Sound settings screen, setting check box label -->
+    <string name="camera_sounds_title">Kamera zárhang</string>
+    <string name="camera_sounds_summary">Figyelmeztetés!: Kamera zárhang tiltása egyes területeken illegális!</string>
+    <!-- Wi-Fi settings screen, advanced, title of the item to show the Wi-Fi device's MAC address. -->
+    <string name="wifi_setting_countrycode_title">Wi-Fi régió kód</string>
+    <!-- Wi-Fi settings screen, setting summary for setting the wifi frequency band [CHAR LIMIT=50]-->
+    <string name="wifi_setting_countrycode_summary">Adja meg a Wi-fi régió kódját</string>
 </resources>
