Option to use volume keys to control media volume anytime (1/2)
Some users don't adjust ringtone volume often (e.g. only use toggle to
switch between silent and non-silent) mode. Having an option to
use the volume keys to control media volume anytime allows media
volume to be controllled/muted before entering a game or other apps
with sound in an undesirable location.

Change-Id: I6dbd25d1a14bcf5b1bf0b0468b96f4b4f8efdb14

Conflicts:
	res/layout/preference_dialog_ringervolume.xml
	res/values/cm_strings.xml
	src/com/android/settings/RingerVolumePreference.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4654,7 +4654,8 @@
     <string name="vibration_title">Phone vibration</string>
     <string name="link_volume_ringtones">Link volumes</string>
     <string name="link_volume_mutes">Link mute states</string>
-
+    <string name="volume_keys_control_ring_stream">Volume keys control ringtone volume</string>
+    
     <!-- Android debugging over WiFi -->
     <string name="adb_over_network">ADB over network</string>
     <string name="adb_over_network_summary">Enable TCP/IP debugging over network interfaces (Wi-Fi, USB networks). This setting is reset on reboot</string>
