--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1964,4 +1964,7 @@
 
     <!-- Permissions Management -->
     <string name="permissions_settings_title">权限管理</string>
+
+    <!-- TRDS Settings -->
+    <string name="trds_settings_title">暗黑 AOKP</string>
 </resources>
