fixed APN edit - CM (1/2)
Change-Id: I4ef525d4b91b2f9510c8d3c7d976013acb7c1ec8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4968,4 +4968,5 @@
     <!-- Text to display in regulatory info screen (from device overlay). -->
     <string name="regulatory_info_text"></string>
 
+    <string name="confirm_delete_apn">The APN will be deleted.</string>
 </resources>
