--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -2053,4 +2053,7 @@ två för att infoga ytterligare kontrollpunkter. \'Ta bort\' raderar den valda 
     <string name="user_image_take_photo" msgid="1280274310152803669">"Ta foto"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Välj ett foto från galleriet"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Växla volymknapparna</string>
+    <string name="swap_volume_buttons_summary">Växla volymknapparna när skärmen är roterad</string>
+
 </resources>
