--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -2021,4 +2021,7 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Vyfotit"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Vybrat fotografii z Galerie"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Převrátit tlačítka hlasistosti</string>
+    <string name="swap_volume_buttons_summary">V případě otočení obrazovky bude převrácen i smysl tlačítek hlasitosti</string>
+
 </resources>
