--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1906,5 +1906,9 @@
     <string name="link_volume_ringtones">Gleiche Lautstärke für Klingelton und Benachrichtigungen</string>
     <string name="link_volume_mutes">Klingelton und Benachrichtigungen gemeinsam stummschalten</string>
     <string name="volume_keys_control_ring_stream">Lautstärketasten steuern Klingeltonlautstärke</string>
+    <string name="swap_volume_buttons_title">Lautstärketasten umkehren</string>
+    <string name="swap_volume_buttons_summary">Belegung der Lautstärketasten umkehren, wenn das Gerät gedreht wird</string>
+    <string name="dim_screen_while_plugged">Dim Display beim Laden</string>
+    <string name="dim_screen_while_plugged_summary">Display Helligkeit beim Laden reduzieren</string>        
 
 </resources>
