--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -1902,4 +1902,9 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Ota kuva"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Valitse kuva galleriasta"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Äänenvoimakkuusnäppäinten paikat</string>
+    <string name="swap_volume_buttons_summary">Vaihda äänenvoimakkuusnäppäinten paikat kun näyttö on käännetty</string>
+    <string name="link_volume_ringtones">Yhdistä soittoääni ja ilmoitusääni</string>
+    <string name="link_volume_mutes">Yhdistä soittoäänen ja ilmoitusäänen äänettömyys</string>
+
 </resources>
