--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1998,4 +1998,7 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Fotó készítése"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Fotó kiválasztása a Galériából"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Hangerőgombok felcserélése</string>
+    <string name="swap_volume_buttons_summary">Hangerőgombok felcserélése, ha a képernyő el van forgatva</string>
+
 </resources>
