--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -1902,4 +1902,9 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Ta et bilde"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Velg bilde fra galleriet"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Bytt volumtastene</string>
+    <string name="swap_volume_buttons_summary">Bytt volumtastene når skjermen er rotert</string>
+    <string name="link_volume_ringtones">Link ringetone &amp; varslings voulum</string>
+    <string name="link_volume_mutes">Stillemodus påvirker varslinger</string>
+
 </resources>
