--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1948,4 +1948,7 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Zrób zdjęcie"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Wybierz zdjęcie z galerii"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Zamień przyciski głośności</string>
+    <string name="swap_volume_buttons_summary">Zamieniaj przyciski głośności po obróceniu ekranu</string>
+
 </resources>
