--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1902,4 +1902,10 @@
     <string name="user_image_take_photo" msgid="1280274310152803669">"Fotoğraf çek"</string>
     <string name="user_image_choose_photo" msgid="7940990613897477057">"Galeri\'den fotoğraf seçin"</string>
     <string name="regulatory_info_text" msgid="5623087902354026557"></string>
+    <string name="swap_volume_buttons_title">Ses tuşlarını yer değiştir</string>
+    <string name="swap_volume_buttons_summary">Ekran döndürüldüğünde ses tuşlarını yer değiştir</string>
+    <string name="link_volume_ringtones">Zilsesi ve bildirim ses düzeyini bağla</string>
+    <string name="link_volume_mutes">Sessiz modu bildirimleri etkiler</string>
+    <string name="volume_keys_control_ring_stream">Ses tuşları zil sesi düzeyini kontrol eder</string>
+
 </resources>
